--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
      <style>
        header {
-        align-items: left;
-        height:50%;
-        width: 25%;
+        align-items: center;
+        height:100%;
+        width: 100%;
 
         }
         footer {
@@ -32,7 +32,7 @@
 
 
     <header>
-    <img src="https://res.cloudinary.com/dydjhelrv/image/upload/v1708578163/Intern-photo_ixrlsr.png" alt="Image Description" style="max-width: 100%;">
+    <img src="https://res.cloudinary.com/dydjhelrv/image/upload/v1708578163/Intern-photo_ixrlsr.png" alt="Image Description" style="width:100%;">
 </header>
     <div class="container">
     
